--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </div>
     <h2 class="team">Our Team</h2>
     <div class="container-images">
-      <img src="/public/person.png" width="300" height="200" alt="img-1" />
-      <img src="/public/person.png" width="300" height="200" alt="img-2" />
-      <img src="/public/person.png" width="300" height="200" alt="img-3" />
+      <img src="./public/person.png" width="300" height="200" alt="img-1" />
+      <img src="./public/person.png" width="300" height="200" alt="img-2" />
+      <img src="./public/person.png" width="300" height="200" alt="img-3" />
     </div>
   </body>
 </html>
